# mesh-llm

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Justfile  PLUGINS.md  PLUGINS_PLAN.md  README.md  RELEASE.md  ROADMAP.md
.github/workflows/: ci.yml  cleanup-caches.yml  docker.yml  release.yml  smoke.yml  warm-caches.yml
benchmarks/: membench-fingerprint-intel.cpp  membench-fingerprint.cu  membench-fingerprint.hip  membench-fingerprint.swift
docker/: Dockerfile.cuda
docs/: AGENTS.md  USAGE.md  index.html
fly/api/: fly.toml
mesh-llm/: Cargo.toml  README.md  TODO.md
mesh-llm/docs/: BLACKBOARD.md  DESIGN.md  IDENTITY_INCIDENT_RESPONSE.md  MULTI_MODAL.md  MoE_DEPLOY_DESIGN.md  NODE_OWNER_IDENTITY.md  TESTING.md
mesh-llm/plugin/: Cargo.toml
mesh-llm/plugin/src/: context.rs  dsl.rs  error.rs  helpers.rs  io.rs  lib.rs  manifest.rs  runtime.rs
mesh-llm/proto/: node.proto  plugin.proto
mesh-llm/skills/blackboard/: SKILL.md
mesh-llm/src/: api.rs  autoupdate.rs  benchmark.rs  blackboard.rs  download.rs  election.rs  lib.rs  main.rs  mesh.rs  pipeline.rs  proxy.rs  tunnel.rs
mesh-llm/src/api/: assets.rs  http.rs  mod.rs  state.rs  status.rs
mesh-llm/src/api/routes/: mod.rs  plugins.rs
mesh-llm/src/app/: mod.rs
mesh-llm/src/cli/: mod.rs  models.rs  terminal_progress.rs
mesh-llm/src/cli/commands/: auth.rs  blackboard.rs  discover.rs  gpus.rs  integrations.rs  mod.rs  models.rs  plugin.rs
mesh-llm/src/cli/commands/models/: formatters.rs  formatters_console.rs  formatters_json.rs  mod.rs
mesh-llm/src/cli/commands/moe/: mod.rs
mesh-llm/src/crypto/: error.rs  keychain.rs  mod.rs  ownership.rs
mesh-llm/src/inference/: election.rs  launch.rs  moe.rs
mesh-llm/src/mesh/: mod.rs
mesh-llm/src/models/: capabilities.rs  catalog.rs  gguf.rs  inventory.rs  local.rs  maintenance.rs  mod.rs  resolve.rs  search.rs  topology.rs
mesh-llm/src/models/resolve/: mod.rs  tests.rs
mesh-llm/src/network/: nostr.rs  proxy.rs  rewrite.rs  tunnel.rs
mesh-llm/src/network/openai/: transport.rs
mesh-llm/src/plugin/: mcp.rs  mod.rs  runtime.rs  stapler.rs
mesh-llm/src/plugins/blackboard/: mod.rs
mesh-llm/src/plugins/blobstore/: mod.rs
mesh-llm/src/plugins/example/: Cargo.toml  README.md
mesh-llm/src/plugins/example/src/: main.rs
mesh-llm/src/protocol/: convert.rs  mod.rs
mesh-llm/src/runtime/: discovery.rs  instance.rs  local.rs  mod.rs  proxy.rs
mesh-llm/src/runtime/proxy/: tests.rs
mesh-llm/src/system/: hardware.rs  moe_planner.rs
mesh-llm/tests/: test_blackboard.sh
mesh-llm/ui/: package-lock.json  package.json  vite.config.ts
mesh-llm/ui/src/: App.tsx  main.tsx
mesh-llm/ui/src/features/app-shell/lib/: status-helpers.ts  topology-types.ts
mesh-llm/ui/src/features/dashboard/components/: DashboardPage.tsx
mesh-llm/ui/src/features/dashboard/components/topology/: MeshTopologyDiagram.tsx
moe/: MOE_ANALYZE_STORAGE_SPEC.md
moe/scripts/: README.md  analyze_and_publish.py
scripts/: benchmark-prefix-affinity.sh  build-linux.sh  ci-client-auto-test.sh  ci-compat-smoke.sh  ci-moe-mesh-test.sh  ci-smoke-test.sh  ci-split-test.sh  install-windows-sdk.ps1  package-release.sh
