[package]
name = "mesh-llm"
version = "0.58.0"
edition = "2021"

[dependencies]
mesh-llm-plugin = { path = "plugin" }
iroh = "0.97"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
base64 = "0.22"
biip = "0.9.2"
dirs = "6.0.0"
hex = "0.4.3"
include_dir = "0.7"
nostr-sdk = { version = "0.44.1", default-features = false }
rustls = "0.23.36"
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
ed25519-dalek = { version = "=3.0.0-pre.1", features = ["rand_core"] }
crypto_box = "0.9"
chacha20poly1305 = "0.10"
argon2 = "0.5"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rpassword = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
httparse = "1"
tokio-stream = "0.1"
url = "2"
urlencoding = "2"
libc = "0.2.183"
regex-lite = "0.1"
rmcp = { version = "1.2", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
schemars = "1"
prost = "0.14"
toml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
hf-hub = { git = "https://github.com/i386/hf-hub.git", rev = "a123ed91f20317d117f83d943b204137d0d24c5e", default-features = false, features = ["ureq", "tokio", "rustls-tls", "cache-manager"] }

[dev-dependencies]
axum = "0.8"
serial_test = "3"
tempfile = "3"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"